--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!-- #1-->
     <ul id="categories">
         <li>
-        <h2>Тварини</h2>
-         <ul>
+        <h2 class="title">Тварини</h2>
+         <ul class="sibling">
             <li>Кіт</li>
             <li>Хом'як</li>
             <li>Кінь</li>
@@ -18,16 +18,16 @@
          </ul>
         </li>
         <li>
-         <h2>Продукти</h2>
-         <ul>
+         <h2 class="title">Продукти</h2>
+         <ul class="sibling">
             <li>Хліб</li>
             <li>Петрушка</li>
             <li>Сир</li>
          </ul>   
         </li>
         <li>
-         <h2>Технології</h2>  
-         <ul>
+         <h2 class="title">Технології</h2>  
+         <ul class="sibling">
             <li>HTML</li>
             <li>CSS</li>
             <li>JavaScript</li>
